syntax = "proto3";

package proto;

service EthereumWalletService {
    // 充值申请：产生一个新收款地址并放入到监控地址数据库表中去，返回新地址
    rpc Deposit (DepositReq) returns (DepositResp) {}
    // 提现申请：发送ETH给接收者
    rpc EtherWithdraw (EtherWithdrawReq) returns (EtherWithdrawResp) {}
    // 提现申请：发送ERC20代币给接收者
    rpc TokenWithdraw (TokenWithdrawReq) returns (TokenWithdrawResp) {}
}

message DepositReq {
    int32 purpose = 1;
}

message DepositResp {
    string address = 1;
}

message EtherWithdrawReq {
    string to = 1;
    string value = 2;
}

message EtherWithdrawResp {
    string txid = 1;
}

message TokenWithdrawReq {
    string token_address = 1;
    string to = 2;
    string value = 3;
}

message TokenWithdrawResp {
    string txid = 1;
}

message TransactionCallback {
	bool is_deposit = 1;
	string txid = 2;
	string from = 3;
	string to = 4;
	string contract = 5;
	uint64 gas = 6;
	string gas_price = 7;
	uint64 status = 8;
	uint64 height = 9;
	string value = 10;
	int64 block_time = 11;
}